// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game has a matching snapshot 1`] = `
Array [
  "This round is 2 three-of-a-kinds",
  "Received 5 of Diamonds, 7 of Hearts",
  "First card is 4 of Hearts",
  "C picked up the 4 of Hearts and an extra",
  "C picked up the J of Diamonds",
  "D picked up the Q of Diamonds",
  "Picked up 5 of Diamonds",
  "B picked up the 10 of Diamonds",
  "Picked up A of Clubs and 7 of Hearts",
  "D picked up the 4 of Diamonds",
  "No player picked up the K of Diamonds",
  "Picked up 9 of Hearts",
  "No player picked up the K of Clubs",
  "B played Set of 6 <2 of Clubs, 6 of Clubs, 6 of Hearts>",
  "B played Set of 10 <10 of Diamonds, 10 of Clubs, 10 of Hearts>",
  "No player picked up the 3 of Diamonds",
  "C played Set of 8 <2 of Hearts, 8 of Diamonds, 8 of Hearts>",
  "C played Set of J <J of Diamonds, J of Clubs, J of Hearts>",
  "No player picked up the 3 of Clubs",
  "Picked up 9 of Diamonds",
  "No player picked up the 5 of Clubs",
  "No player picked up the 7 of Diamonds",
  "No player picked up the 7 of Clubs",
  "D played Set of 4 <2 of Spades, 4 of Diamonds, 4 of Clubs>",
  "D played Set of Q <Q of Diamonds, Q of Clubs, Q of Hearts>",
  "D is out of cards",
  "A: 10 B: 10 C: 10 D: -10",
  "This round is 1 three-of-a-kind and 1 four-card-run",
  "Received 10 of Spades",
  "First card is 8 of Hearts",
  "C picked up the 8 of Hearts",
  "D picked up the J of Diamonds",
  "Picked up 4 of Diamonds",
  "B picked up the K of Diamonds",
  "C picked up the 6 of Diamonds",
  "Picked up A of Clubs and 9 of Hearts",
  "Picked up J of Clubs",
  "B picked up the 5 of Diamonds",
  "Picked up K of Clubs and J of Hearts",
  "D picked up the 10 of Clubs",
  "No player picked up the 3 of Clubs",
  "Picked up K of Hearts",
  "No player picked up the J of Hearts",
  "No player picked up the A of Hearts",
  "No player picked up the Q of Hearts",
  "No player picked up the 7 of Clubs",
  "Picked up 4 of Spades",
  "D picked up the 9 of Diamonds and an extra",
  "No player picked up the 9 of Clubs",
  "No player picked up the 3 of Diamonds",
  "C picked up the 6 of Hearts and an extra",
  "Picked up 10 of Spades",
  "D picked up the 8 of Clubs and an extra",
  "No player picked up the Q of Spades",
  "C played Set of 6 <6 of Diamonds, 6 of Clubs, 6 of Hearts>",
  "C played Run of Hearts <5 of Hearts, 2 of Clubs, 2 of Spades, 8 of Hearts>",
  "No player picked up the 7 of Diamonds",
  "D played Set of 8 <8 of Diamonds, 8 of Clubs, 8 of Spades>",
  "D played Run of Diamonds <9 of Diamonds, 2 of Hearts, J of Diamonds, Q of Diamonds>",
  "No player picked up the 10 of Hearts",
  "Picked up * (Joker)",
  "No player picked up the 3 of Hearts",
  "No player picked up the A of Diamonds",
  "No player picked up the 7 of Spades",
  "No player picked up the 3 of Spades",
  "Picked up 4 of Diamonds",
  "No player picked up the K of Hearts",
  "B is out of cards",
  "A: 20 B: 0 C: 25 D: 25",
  "This round is 2 four-card-runs",
  "Received 8 of Diamonds, Q of Diamonds, 7 of Clubs, 2 of Hearts, J of Diamonds, 10 of Clubs, 3 of Diamonds, 6 of Diamonds, 9 of Diamonds",
  "First card is Q of Hearts",
  "D picked up the Q of Hearts",
  "Picked up J of Diamonds",
  "B picked up the J of Clubs",
  "C picked up the K of Diamonds",
  "D picked up the 6 of Diamonds",
  "B picked up the A of Clubs and an extra",
  "Picked up A of Hearts",
  "B picked up the 10 of Hearts",
  "No player picked up the 5 of Diamonds",
  "No player picked up the 5 of Clubs",
  "Picked up 10 of Clubs",
  "No player picked up the A of Hearts",
  "No player picked up the 9 of Diamonds",
  "No player picked up the 9 of Clubs",
  "No player picked up the 6 of Clubs",
  "Picked up 7 of Spades",
  "No player picked up the 4 of Diamonds",
  "No player picked up the 4 of Clubs",
  "No player picked up the K of Clubs",
  "No player picked up the 10 of Spades",
  "Picked up J of Spades",
  "No player picked up the J of Spades",
  "C picked up the Q of Spades",
  "No player picked up the 4 of Hearts",
  "No player picked up the K of Spades",
  "Picked up A of Spades",
  "No player picked up the A of Spades",
  "No player picked up the 8 of Clubs",
  "No player picked up the 8 of Hearts",
  "No player picked up the 5 of Hearts",
  "Picked up 3 of Diamonds",
  "No player picked up the 3 of Clubs",
  "No player picked up the 3 of Hearts",
  "D picked up the 5 of Spades",
  "No player picked up the Q of Hearts",
  "Picked up 6 of Diamonds",
  "No player picked up the 6 of Hearts",
  "No player picked up the 7 of Hearts",
  "D picked up the 5 of Diamonds",
  "No player picked up the 9 of Hearts",
  "Picked up 9 of Diamonds",
  "No player picked up the 7 of Spades",
  "No player picked up the 10 of Diamonds",
  "D picked up the 8 of Diamonds",
  "D is out of cards",
  "A: 95 B: 135 C: 175 D: 15",
]
`;

exports[`game has a matching snapshot 2`] = `
Array [
  "This round is 2 three-of-a-kinds",
  "Received K of Hearts",
  "First card is 4 of Hearts",
  "C picked up the 4 of Hearts and an extra",
  "Picked up 6 of Hearts",
  "C picked up the J of Diamonds",
  "D picked up the Q of Diamonds",
  "A picked up the 5 of Diamonds",
  "Picked up 10 of Diamonds",
  "A picked up the A of Clubs and an extra",
  "D picked up the 4 of Diamonds",
  "No player picked up the K of Diamonds",
  "No player picked up the K of Clubs",
  "Picked up 10 of Hearts",
  "No player picked up the 3 of Diamonds",
  "C played Set of 8 <2 of Hearts, 8 of Diamonds, 8 of Hearts>",
  "C played Set of J <J of Diamonds, J of Clubs, J of Hearts>",
  "No player picked up the 3 of Clubs",
  "A picked up the 9 of Diamonds",
  "A played Set of 9 <9 of Diamonds, 9 of Clubs, 9 of Hearts>",
  "A played Set of A <2 of Diamonds, A of Diamonds, A of Clubs>",
  "No player picked up the 5 of Clubs",
  "Picked up K of Hearts",
  "No player picked up the 7 of Diamonds",
  "No player picked up the 7 of Clubs",
  "D played Set of 4 <2 of Spades, 4 of Diamonds, 4 of Clubs>",
  "D played Set of Q <Q of Diamonds, Q of Clubs, Q of Hearts>",
  "D is out of cards",
  "A: 10 B: 10 C: 10 D: -10",
  "This round is 1 three-of-a-kind and 1 four-card-run",
  "Received ",
  "First card is 8 of Hearts",
  "C picked up the 8 of Hearts",
  "D picked up the J of Diamonds",
  "A picked up the 4 of Diamonds",
  "Picked up K of Diamonds",
  "C picked up the 6 of Diamonds",
  "A picked up the A of Clubs and an extra",
  "A picked up the J of Clubs",
  "Picked up 5 of Diamonds",
  "A picked up the K of Clubs and an extra",
  "D picked up the 10 of Clubs",
  "No player picked up the 3 of Clubs",
  "No player picked up the J of Hearts",
  "Picked up A of Hearts",
  "No player picked up the A of Hearts",
  "No player picked up the Q of Hearts",
  "No player picked up the 7 of Clubs",
  "A played Set of 4 <4 of Diamonds, 4 of Clubs, 4 of Spades>",
  "A played Run of Clubs <J of Clubs, Q of Clubs, K of Clubs, A of Clubs>",
  "D picked up the 9 of Diamonds and an extra",
  "Picked up 6 of Spades",
  "No player picked up the 9 of Clubs",
  "No player picked up the 3 of Diamonds",
  "C picked up the 6 of Hearts and an extra",
  "D picked up the 8 of Clubs and an extra",
  "Picked up Q of Spades",
  "No player picked up the Q of Spades",
  "C played Set of 6 <6 of Diamonds, 6 of Clubs, 6 of Hearts>",
  "C played Run of Hearts <5 of Hearts, 2 of Clubs, 2 of Spades, 8 of Hearts>",
  "No player picked up the 7 of Diamonds",
  "D played Set of 8 <8 of Diamonds, 8 of Clubs, 8 of Spades>",
  "D played Run of Diamonds <9 of Diamonds, 2 of Hearts, J of Diamonds, Q of Diamonds>",
  "No player picked up the 10 of Hearts",
  "No player picked up the 3 of Hearts",
  "Picked up * (Joker)",
  "No player picked up the A of Diamonds",
  "No player picked up the 7 of Spades",
  "No player picked up the 3 of Spades",
  "No player picked up the K of Hearts",
  "Picked up 5 of Diamonds",
  "B is out of cards",
  "A: 20 B: 0 C: 25 D: 25",
  "This round is 2 four-card-runs",
  "Received Q of Clubs, J of Hearts, J of Clubs, A of Clubs, K of Hearts, 10 of Hearts, 4 of Spades, 8 of Spades, * (Joker), 4 of Diamonds, 7 of Diamonds",
  "First card is Q of Hearts",
  "D picked up the Q of Hearts",
  "A picked up the J of Diamonds",
  "Picked up J of Clubs",
  "C picked up the K of Diamonds",
  "D picked up the 6 of Diamonds",
  "Picked up A of Clubs and K of Hearts",
  "Picked up 10 of Hearts",
  "No player picked up the 5 of Diamonds",
  "No player picked up the 5 of Clubs",
  "A picked up the 10 of Clubs",
  "No player picked up the A of Hearts",
  "Picked up 4 of Spades",
  "No player picked up the 9 of Diamonds",
  "No player picked up the 9 of Clubs",
  "No player picked up the 6 of Clubs",
  "No player picked up the 4 of Diamonds",
  "Picked up 8 of Spades",
  "No player picked up the 4 of Clubs",
  "No player picked up the K of Clubs",
  "No player picked up the 10 of Spades",
  "No player picked up the J of Spades",
  "Picked up Q of Spades",
  "C picked up the Q of Spades",
  "No player picked up the 4 of Hearts",
  "No player picked up the K of Spades",
  "No player picked up the A of Spades",
  "Picked up * (Joker)",
  "No player picked up the 8 of Clubs",
  "No player picked up the 8 of Hearts",
  "No player picked up the 5 of Hearts",
  "No player picked up the 3 of Clubs",
  "Picked up 4 of Diamonds",
  "No player picked up the 3 of Hearts",
  "D picked up the 5 of Spades",
  "No player picked up the Q of Hearts",
  "No player picked up the 6 of Hearts",
  "Picked up 7 of Diamonds",
  "No player picked up the 7 of Hearts",
  "D picked up the 5 of Diamonds",
  "No player picked up the 9 of Hearts",
  "No player picked up the 7 of Spades",
  "Picked up 10 of Diamonds",
  "No player picked up the 10 of Diamonds",
  "D picked up the 8 of Diamonds",
  "D is out of cards",
  "A: 95 B: 135 C: 175 D: 15",
]
`;

exports[`game has a matching snapshot 3`] = `
Array [
  "This round is 2 three-of-a-kinds",
  "Received 4 of Hearts, 5 of Hearts",
  "First card is 4 of Hearts",
  "Picked up 4 of Hearts and 5 of Hearts",
  "Picked up J of Diamonds",
  "D picked up the Q of Diamonds",
  "A picked up the 5 of Diamonds",
  "B picked up the 10 of Diamonds",
  "A picked up the A of Clubs and an extra",
  "Picked up 8 of Hearts",
  "D picked up the 4 of Diamonds",
  "No player picked up the K of Diamonds",
  "No player picked up the K of Clubs",
  "B played Set of 6 <2 of Clubs, 6 of Clubs, 6 of Hearts>",
  "B played Set of 10 <10 of Diamonds, 10 of Clubs, 10 of Hearts>",
  "No player picked up the 3 of Diamonds",
  "Picked up J of Hearts",
  "No player picked up the 3 of Clubs",
  "A picked up the 9 of Diamonds",
  "A played Set of 9 <9 of Diamonds, 9 of Clubs, 9 of Hearts>",
  "A played Set of A <2 of Diamonds, A of Diamonds, A of Clubs>",
  "No player picked up the 5 of Clubs",
  "No player picked up the 7 of Diamonds",
  "Picked up A of Hearts",
  "No player picked up the 7 of Clubs",
  "D played Set of 4 <2 of Spades, 4 of Diamonds, 4 of Clubs>",
  "D played Set of Q <Q of Diamonds, Q of Clubs, Q of Hearts>",
  "D is out of cards",
  "A: 10 B: 10 C: 10 D: -10",
  "This round is 1 three-of-a-kind and 1 four-card-run",
  "Received 9 of Spades, K of Spades",
  "First card is 8 of Hearts",
  "Picked up 8 of Hearts",
  "D picked up the J of Diamonds",
  "A picked up the 4 of Diamonds",
  "B picked up the K of Diamonds",
  "Picked up 6 of Diamonds",
  "A picked up the A of Clubs and an extra",
  "A picked up the J of Clubs",
  "B picked up the 5 of Diamonds",
  "A picked up the K of Clubs and an extra",
  "Picked up Q of Hearts",
  "D picked up the 10 of Clubs",
  "No player picked up the 3 of Clubs",
  "No player picked up the J of Hearts",
  "No player picked up the A of Hearts",
  "Picked up 2 of Spades",
  "No player picked up the Q of Hearts",
  "No player picked up the 7 of Clubs",
  "A played Set of 4 <4 of Diamonds, 4 of Clubs, 4 of Spades>",
  "A played Run of Clubs <J of Clubs, Q of Clubs, K of Clubs, A of Clubs>",
  "D picked up the 9 of Diamonds and an extra",
  "No player picked up the 9 of Clubs",
  "Picked up 7 of Spades",
  "No player picked up the 3 of Diamonds",
  "Picked up 6 of Hearts and 9 of Spades",
  "D picked up the 8 of Clubs and an extra",
  "No player picked up the Q of Spades",
  "Picked up K of Spades",
  "No player picked up the 7 of Diamonds",
  "D played Set of 8 <8 of Diamonds, 8 of Clubs, 8 of Spades>",
  "D played Run of Diamonds <9 of Diamonds, 2 of Hearts, J of Diamonds, Q of Diamonds>",
  "No player picked up the 10 of Hearts",
  "No player picked up the 3 of Hearts",
  "No player picked up the A of Diamonds",
  "Picked up 2 of Diamonds",
  "No player picked up the 7 of Spades",
  "No player picked up the 3 of Spades",
  "No player picked up the K of Hearts",
  "B is out of cards",
  "A: 20 B: 0 C: 25 D: 25",
  "This round is 2 four-card-runs",
  "Received 2 of Diamonds, 10 of Diamonds, A of Diamonds, K of Diamonds, 2 of Spades, 9 of Spades, Q of Spades, * (Joker), J of Diamonds",
  "First card is Q of Hearts",
  "D picked up the Q of Hearts",
  "A picked up the J of Diamonds",
  "B picked up the J of Clubs",
  "Picked up K of Diamonds",
  "D picked up the 6 of Diamonds",
  "B picked up the A of Clubs and an extra",
  "B picked up the 10 of Hearts",
  "No player picked up the 5 of Diamonds",
  "Picked up 2 of Spades",
  "No player picked up the 5 of Clubs",
  "A picked up the 10 of Clubs",
  "No player picked up the A of Hearts",
  "No player picked up the 9 of Diamonds",
  "Picked up 5 of Spades",
  "No player picked up the 9 of Clubs",
  "No player picked up the 6 of Clubs",
  "No player picked up the 4 of Diamonds",
  "No player picked up the 4 of Clubs",
  "Picked up 9 of Spades",
  "No player picked up the K of Clubs",
  "No player picked up the 10 of Spades",
  "No player picked up the J of Spades",
  "Picked up Q of Spades",
  "No player picked up the 4 of Hearts",
  "No player picked up the K of Spades",
  "No player picked up the A of Spades",
  "No player picked up the 8 of Clubs",
  "Picked up * (Joker)",
  "No player picked up the 8 of Hearts",
  "No player picked up the 5 of Hearts",
  "No player picked up the 3 of Clubs",
  "No player picked up the 3 of Hearts",
  "Picked up 5 of Diamonds",
  "D picked up the 5 of Spades",
  "No player picked up the Q of Hearts",
  "No player picked up the 6 of Hearts",
  "No player picked up the 7 of Hearts",
  "Picked up 8 of Diamonds",
  "D picked up the 5 of Diamonds",
  "No player picked up the 9 of Hearts",
  "No player picked up the 7 of Spades",
  "No player picked up the 10 of Diamonds",
  "Picked up J of Diamonds",
  "D picked up the 8 of Diamonds",
  "D is out of cards",
  "A: 95 B: 135 C: 175 D: 15",
]
`;

exports[`game has a matching snapshot 4`] = `
Array [
  "This round is 2 three-of-a-kinds",
  "Received ",
  "First card is 4 of Hearts",
  "C picked up the 4 of Hearts and an extra",
  "C picked up the J of Diamonds",
  "Picked up Q of Diamonds",
  "A picked up the 5 of Diamonds",
  "B picked up the 10 of Diamonds",
  "A picked up the A of Clubs and an extra",
  "Picked up 4 of Diamonds",
  "No player picked up the K of Diamonds",
  "No player picked up the K of Clubs",
  "B played Set of 6 <2 of Clubs, 6 of Clubs, 6 of Hearts>",
  "B played Set of 10 <10 of Diamonds, 10 of Clubs, 10 of Hearts>",
  "No player picked up the 3 of Diamonds",
  "C played Set of 8 <2 of Hearts, 8 of Diamonds, 8 of Hearts>",
  "C played Set of J <J of Diamonds, J of Clubs, J of Hearts>",
  "No player picked up the 3 of Clubs",
  "Picked up Q of Hearts",
  "A picked up the 9 of Diamonds",
  "A played Set of 9 <9 of Diamonds, 9 of Clubs, 9 of Hearts>",
  "A played Set of A <2 of Diamonds, A of Diamonds, A of Clubs>",
  "No player picked up the 5 of Clubs",
  "No player picked up the 7 of Diamonds",
  "No player picked up the 7 of Clubs",
  "Picked up 2 of Spades",
  "D is out of cards",
  "A: 10 B: 10 C: 10 D: -10",
  "This round is 1 three-of-a-kind and 1 four-card-run",
  "Received 5 of Spades, J of Spades, A of Spades, 3 of Diamonds",
  "First card is 8 of Hearts",
  "C picked up the 8 of Hearts",
  "Picked up J of Diamonds",
  "A picked up the 4 of Diamonds",
  "B picked up the K of Diamonds",
  "C picked up the 6 of Diamonds",
  "A picked up the A of Clubs and an extra",
  "Picked up 10 of Hearts",
  "A picked up the J of Clubs",
  "B picked up the 5 of Diamonds",
  "A picked up the K of Clubs and an extra",
  "Picked up 10 of Clubs",
  "No player picked up the 3 of Clubs",
  "No player picked up the J of Hearts",
  "No player picked up the A of Hearts",
  "No player picked up the Q of Hearts",
  "Picked up 3 of Spades",
  "No player picked up the 7 of Clubs",
  "A played Set of 4 <4 of Diamonds, 4 of Clubs, 4 of Spades>",
  "A played Run of Clubs <J of Clubs, Q of Clubs, K of Clubs, A of Clubs>",
  "Picked up 9 of Diamonds and 5 of Spades",
  "No player picked up the 9 of Clubs",
  "No player picked up the 3 of Diamonds",
  "Picked up 8 of Spades",
  "C picked up the 6 of Hearts and an extra",
  "Picked up 8 of Clubs and J of Spades",
  "No player picked up the Q of Spades",
  "C played Set of 6 <6 of Diamonds, 6 of Clubs, 6 of Hearts>",
  "C played Run of Hearts <5 of Hearts, 2 of Clubs, 2 of Spades, 8 of Hearts>",
  "No player picked up the 7 of Diamonds",
  "Picked up A of Spades",
  "No player picked up the 10 of Hearts",
  "No player picked up the 3 of Hearts",
  "No player picked up the A of Diamonds",
  "No player picked up the 7 of Spades",
  "Picked up 3 of Diamonds",
  "No player picked up the 3 of Spades",
  "No player picked up the K of Hearts",
  "B is out of cards",
  "A: 20 B: 0 C: 25 D: 25",
  "This round is 2 four-card-runs",
  "Received ",
  "First card is Q of Hearts",
  "Picked up Q of Hearts",
  "A picked up the J of Diamonds",
  "B picked up the J of Clubs",
  "C picked up the K of Diamonds",
  "Picked up 6 of Diamonds",
  "B picked up the A of Clubs and an extra",
  "B picked up the 10 of Hearts",
  "No player picked up the 5 of Diamonds",
  "No player picked up the 5 of Clubs",
  "Picked up 3 of Spades",
  "A picked up the 10 of Clubs",
  "No player picked up the A of Hearts",
  "No player picked up the 9 of Diamonds",
  "No player picked up the 9 of Clubs",
  "Picked up 6 of Spades",
  "No player picked up the 6 of Clubs",
  "No player picked up the 4 of Diamonds",
  "No player picked up the 4 of Clubs",
  "No player picked up the K of Clubs",
  "Picked up 10 of Spades",
  "No player picked up the 10 of Spades",
  "No player picked up the J of Spades",
  "C picked up the Q of Spades",
  "No player picked up the 4 of Hearts",
  "Picked up K of Spades",
  "No player picked up the K of Spades",
  "No player picked up the A of Spades",
  "No player picked up the 8 of Clubs",
  "No player picked up the 8 of Hearts",
  "Picked up 2 of Diamonds",
  "No player picked up the 5 of Hearts",
  "No player picked up the 3 of Clubs",
  "No player picked up the 3 of Hearts",
  "Picked up 5 of Spades",
  "No player picked up the Q of Hearts",
  "No player picked up the 6 of Hearts",
  "No player picked up the 7 of Hearts",
  "Picked up 5 of Diamonds",
  "No player picked up the 9 of Hearts",
  "No player picked up the 7 of Spades",
  "No player picked up the 10 of Diamonds",
  "Picked up 8 of Diamonds",
  "D is out of cards",
  "A: 95 B: 135 C: 175 D: 15",
]
`;
